--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "private": true,
   "homepage": "https://myusername.github.io/my-app",
   "dependencies": {
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap-select-dropdown": "^1.3.2",
     "react-dom": "^17.0.2",
+    "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-scripts": "4.0.3",
     "react-signature-canvas": "^1.0.3",
     "requirejs": "^2.3.6",
