--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "my-app",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "private": true,
   "homepage": "https://myusername.github.io/my-app",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^v5.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
