--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "homepage": "https://myusername.github.io/my-app",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^v5.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap-select": "^1.13.18",
     "gh-pages": "^3.2.3",
+    "pandas-js": "^0.2.4",
     "react": "^17.0.2",
     "react-bootstrap-select-dropdown": "^1.3.2",
     "react-dom": "^17.0.2",
