--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.25.0",
     "bootstrap-select": "^1.13.18",
     "gh-pages": "^3.2.3",
     "pandas-js": "^0.2.4",
