--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "axios": "^0.25.0",
     "bootstrap-select": "^1.13.18",
     "gh-pages": "^3.2.3",
+    "lodash": "^4.17.21",
+    "mathjs": "^10.4.0",
     "pandas-js": "^0.2.4",
     "react": "^17.0.2",
     "react-bootstrap-select-dropdown": "^1.3.2",
+    "react-datasheet": "^1.4.9",
     "react-dom": "^17.0.2",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-scripts": "4.0.3",
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html5-qrcode": "^2.2.0"
   }
 }
