--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.25.0",
+    "bootstrap": "^4.6.0",
     "bootstrap-select": "^1.13.18",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "mathjs": "^10.4.0",
     "pandas-js": "^0.2.4",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.5",
     "react-bootstrap-select-dropdown": "^1.3.2",
     "react-datasheet": "^1.4.9",
     "react-dom": "^17.0.2",
