--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL= http://checklists.metoui.be/api
+REACT_APP_BASE_URL= https://api-dev.dynalist.eu/api
+REACT_APP_PUBLIC_BASE_URL = /
