--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-app",
+  "name": "dynalist",
   "version": "0.5.1",
   "private": true,
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://myusername.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "angular-code-input": "^1.6.0",
     "axios": "^0.25.0",
     "bootstrap": "^4.6.0",
     "bootstrap-select": "^1.13.18",
@@ -19,10 +20,12 @@
     "react-bootstrap-select-dropdown": "^1.3.2",
     "react-datasheet": "^1.4.9",
     "react-dom": "^17.0.2",
+    "react-input-pin-code": "^1.2.0",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-scripts": "4.0.3",
     "react-signature-canvas": "^1.0.3",
     "requirejs": "^2.3.6",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "html5-qrcode": "^2.2.0"
+    "html5-qrcode": "^2.2.0",
+    "react-router-dom": "^6.4.3"
   }
 }
